--- a/modules/gateway/assertions/SimpleRawTransportAssertion/src/main/java/com/l7tech/external/assertions/rawtcp/console/SimpleRawTransportAssertionPropertiesDialog.form
+++ b/modules/gateway/assertions/SimpleRawTransportAssertion/src/main/java/com/l7tech/external/assertions/rawtcp/console/SimpleRawTransportAssertionPropertiesDialog.form
@@ -3,7 +3,7 @@
   <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="48" y="54" width="511" height="425"/>
+      <xy x="48" y="54" width="520" height="425"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -35,7 +35,8 @@
           <component id="6fef5" class="javax.swing.JComboBox" binding="requestSourceComboBox">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <minimum-size width="250" height="-1"/>
+                <minimum-size width="100" height="-1"/>
+                <preferred-size width="250" height="-1"/>
               </grid>
             </constraints>
             <properties>
